--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,3 +1,3 @@
-<% @title = "Sublime Text 3 - Projects - TicketTracker" %>
+<% title(@project.name, "Projects") %>
 <h1><%= @project.name %></h1>
 <p><%= @project.description %></p>
