--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= flash.each do |key, message| %>
+  <% flash.each do |key, message| %>
     <div><%= message %></div>
   <% end %>
 <%= yield %>
