--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Projects</h1>
+<div class="page-header">
+  <h1>Projects</h1>
+</div>
+
 <%= link_to "New Project", new_project_path %>
 
 <div id="projects">
