--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,11 @@
 <div class="page-header">
   <h1>Projects</h1>
-</div>
 
-<%= link_to "New Project", new_project_path %>
+  <ul class="actions">
+    <li><%= link_to fa_icon("plus") + " New Project", new_project_path,
+      class: "btn btn-success" %></li>
+  </ul>
+</div>
 
 <div id="projects">
   <% @projects.each do |project| %>
