--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,16 @@
 <% title(@project.name, "Projects") %>
 
-<div class="page-header">
+<header>
   <h1><%= @project.name %></h1>
 
   <ul class="actions">
-    <%= link_to fa_icon("pencil") + " Edit Project",
-        edit_project_path(@project), class: "btn btn-primary" %>
-    <%= link_to fa_icon("trash") + " Delete Project",
-        project_path(@project),
-        method: :delete,
-        data: { confirm: "Are you sure you want to delete this project?" },
-        class: "btn btn-danger" %></li>
+    <li><%= link_to "Edit Project", edit_project_path(@project),
+      class: "edit" %></li>
+    <li><%= link_to "Delete Project", project_path(@project),
+      method: :delete,
+      data: { confirm: "Are you sure you want to delete this project?" },
+      class: "delete" %></li>
   </ul>
-</div>
+</header>
 
 <p><%= @project.description %></p>
