--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,14 +16,8 @@
   }
 }
 
-ul.actions {
-  @extend .list-unstyled;
-  @extend .list-inline;
-  position: absolute;
-  bottom: -2px;
-  right: 2px;
-  max-width: 45%;
-  text-align: right;
+form {
+  max-width: 500px;
 }
 
 header {
@@ -34,6 +28,24 @@ header {
   &:first-child {
     margin-top: 20px;
   }
+}
+
+.alert-notice {
+  @extend .alert-success;
+}
+
+.alert-alert {
+  @extend .alert-danger;
+}
+
+ul.actions {
+  @extend .list-unstyled;
+  @extend .list-inline;
+  position: absolute;
+  bottom: -2px;
+  right: 2px;
+  max-width: 45%;
+  text-align: right;
 }
 
 a.new, a.edit, a.delete {
@@ -67,12 +79,4 @@ a.delete {
   &:before {
     @extend .fa-trash;
   }
-}
-
-.alert-notice {
-  @extend .alert-success;
-}
-
-.alert-alert {
-  @extend .alert-danger;
 }
