add: responsive styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,7 @@
 @import 'bootstrap';
 @import 'font-awesome';
 @import 'projects';
+@import 'responsive';
 
 .page-header {
   position: relative;
@@ -45,11 +46,6 @@ body {
 ul.actions {
   @extend .list-unstyled;
   @extend .list-inline;
-  position: absolute;
-  bottom: -2px;
-  right: 2px;
-  max-width: 45%;
-  text-align: right;
 }
 
 a.new, a.edit, a.delete {
