--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
-        <%= link_to "TicketTracker", root_path, class: "navbar-brand" %>
+        <%= link_to "ProjectTracker", root_path, class: "navbar-brand" %>
         <button type="button" class="navbar-toggle collapsed"
           data-toggle="collapse" data-target="#collapse">
           <span class="sr-only">Toggle navigation</span>
