--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,11 @@
               <p class="navbar-text">
                 Signed in as <%= current_user.email %>
               </p>
+              <ul class="nav navbar-nav">
+                <li><%= link_to "Sign out", destroy_user_session_path,
+                  method: :delete %>
+                </li>
+              </ul>
             </div>
           <% end %>
           <li class="<%= "active" if current_page?("/") %>">
