--- a/app/assets/stylesheets/tickets.scss
+++ b/app/assets/stylesheets/tickets.scss
@@ -17,3 +17,13 @@
     line-height: 24px !important;
   }
 }
+
+.state {
+  @extend .label;
+  font-size: 12px;
+  padding: 0.3em 0.6em;
+}
+
+#tickets li {
+  padding-bottom: 10px;
+}
