--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -30,7 +30,7 @@
     </tr>
     <% if @ticket.state.present? %>
       <tr>
-        <th>State</th>
+        <th>State:</th>
         <td><%= render @ticket.state %></td>
       </tr>
     <% end %>
