--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <% if content_for?(:title) %>
       <%= yield(:title) %>
     <% else %>
-      TicketTracker
+      ProjectTracker
     <% end %>
   </title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
